# src/routes/surgery.routes.ts
@@ -5,7 +5,10 @@ import SurgeryCtrl from "../controller/Surgery.ctrl";
 const surgeryRouter = Router();
 
 surgeryRouter.get("/", UtilsService.authentication, SurgeryCtrl.allProcedure);
-surgeryRouter.get("/:surgeryId", UtilsService.authentication, SurgeryCtrl.procedure);
+surgeryRouter
+  .route("/:surgeryId")
+  .get(UtilsService.authentication, SurgeryCtrl.procedure)
+  .delete(UtilsService.authentication, UtilsService.adminAuthorization, SurgeryCtrl.deleteProcedure);
 surgeryRouter.post("/new", UtilsService.authentication, UtilsService.doctorAuthorization, SurgeryCtrl.newProcedure);
 surgeryRouter.put(
   "/update/:surgeryId",
@@ -13,5 +16,4 @@ surgeryRouter.put(
   UtilsService.doctorAuthorization,
   SurgeryCtrl.updateProcedure
 );
-surgeryRouter.get("/", UtilsService.authentication, UtilsService.adminAuthorization, SurgeryCtrl.deleterocedure);
 export default surgeryRouter;
